# isurf-mgmt-lab

./: .gitignore  ENDPOINTS.md  Install.ps1  README.md  TODO.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  log.conf  tauri.conf.json
src-tauri/db/: init.sql  migrate_002.sql  migrate_003.sql  migrate_004.sql  migrate_005.sql  schema.sql  seed.sql
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/socios/: MonthlyPaymentsEditor.tsx  SocioForm.tsx
src/config/: sidebar.tsx
src/pages/: Ajuda.tsx  Dashboard.tsx  Setup.tsx  Socios.tsx
src/providers/: ThemeProvider.tsx
src/types/: socio.ts
src/ui/sidebar/: ThemeToggleButton.tsx
